NoExp.Presentation/Components/Layout/MainLayout.razor.css
.page {
    position: relative;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    padding: 0;
}

main {
    flex: 1;
    margin: 0;
    padding: 0;
}

.content {
    max-width: 1600px;
    margin: 0 auto;
    width: 100%;
    padding-top: 5rem;
}

@media (min-width: 1200px) {
    .content {
        padding-left: 6rem !important;
        padding-right: 6rem !important;
        padding-top: 5rem !important;
    }
}

@media (min-width: 1600px) {
    .content {
        padding-left: 10rem !important;
        padding-right: 10rem !important;
        padding-top: 5rem !important;
    }
}

@media (max-width: 640.98px) {
    .content {
        padding-top: 4rem !important;
    }
}

#blazor-error-ui {
    color-scheme: light only;
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    box-sizing: border-box;
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

#blazor-error-ui .dismiss {
    cursor: pointer;
    position: absolute;
    right: 0.75rem;
    top: 0.5rem;
}

